--- a/src/pages/Menu/Menu.css
+++ b/src/pages/Menu/Menu.css
@@ -1,4 +1,24 @@
 .container-menu{
     display: flex;
+    flex-direction: column;
 }
 
+.container-menu .content-menu{
+    display: grid;
+    grid-template-columns: repeat(5, 238.2px);
+    grid-template-rows: repeat(3, 280.8px);
+    gap: 24px 28px;
+    margin-left: 24px;
+}
+
+.container-menu .title-menu{
+    margin-left: 24px;
+    color: var(--White, #FFF);
+/* Heading/H2 */
+font-family: Barlow;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 140%; /* 28px */
+margin-bottom: 24px;
+}
