--- a/src/pages/Setting/ProductManager/ProductManager.css
+++ b/src/pages/Setting/ProductManager/ProductManager.css
@@ -3,7 +3,7 @@
     margin-left: 24px;
     margin-right: 24px;
     margin-top: 24px;
-    height: 743px;
+    min-height: 743px;
     background-color: #1f1d2b;
     border-radius: 8px;
     display: flex;
@@ -15,6 +15,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: 140%; /* 28px */
+    padding-bottom: 24px;
   }
   
   .container-product-management .title-product-management {
@@ -90,38 +91,6 @@
   
   .add-frame img {
     padding: 14px;
-  }
-  
-  .container-product-management .group-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 48px;
-    margin-top: 47px;
-    width: calc(100% - 48px);
-    margin-left: auto;
-    gap: 8px;
-    margin-right: auto;
-  }
-  
-  .container-product-management .group-btn .btn-pro {
-    height: 100%;
-    width: 172px;
-    font-size: 14px;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-  
-  .btn-pro.discard-changes{
-      border: 1px solid #EA7C69;
-      background-color: transparent;
-      color: #EA7C69;
-  }
-  
-  .btn-pro.save-changes{
-      box-shadow: 0px 8px 24px 0px rgba(234, 124, 105, 0.40);
-      background-color: #EA7C69;
-      color: #fff;
   }
   
   .container-product-management .content-product-management::-webkit-scrollbar {
