--- a/src/components/Payment/Payment.css
+++ b/src/components/Payment/Payment.css
@@ -100,7 +100,30 @@
 .container-payment .main-form-payment .content-payment{
   display: flex;
   flex-direction: column;
+  overflow: auto;
+  max-height: 690px;
   gap: 24px;
+}
+
+.container-payment .main-form-payment .content-payment::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+.container-payment .main-form-payment .content-payment::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.container-payment .main-form-payment .content-payment::-webkit-scrollbar-thumb {
+  background: #393c49;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.container-payment .main-form-payment .content-payment::-webkit-scrollbar-thumb:hover {
+  background: #4a4545;
 }
 
 .container-payment .main-form-payment .footer-payment{
@@ -276,6 +299,12 @@ line-height: 130%; /* 18.2px */
   margin-bottom: 24px;
 }
 
+.box-btn-payment button{
+  width: 175px;
+  height: 48px;
+  cursor: pointer;
+}
+
 .box-btn-payment .cancel-btn{
   border-radius: 8px;
 border: 1px solid var(--Primary-Color, #EA7C69);
@@ -320,7 +349,7 @@ line-height: 140%; /* 19.6px */
   width: 814px;
   z-index: 10;
   position: absolute;
-  right: -900px;
+  right: -1000px;
   top: 0;
   transition: all ease-in-out 0.4s;
   padding: 64px 52.5px 24px;
@@ -329,7 +358,7 @@ line-height: 140%; /* 19.6px */
 .transition-payment .trans-1{
   position: absolute;
   transition: all ease-in-out 0.4s;
-  right: 12px;
+  right: 0px;
   top: 0;
 }
 
