--- a/src/pages/Login/LoginRegister.css
+++ b/src/pages/Login/LoginRegister.css
@@ -257,7 +257,7 @@ gap: 14px;
   cursor: pointer;
 }
 /* Button styling */
-form button {
+.form-box.login form button {
   width: 100%;
   height: 45px;
   border-radius: 12px;
