--- a/src/components/ItemProductManagement/ItemProductManagement.css
+++ b/src/components/ItemProductManagement/ItemProductManagement.css
@@ -1,5 +1,8 @@
 .container-ipm {
   height: 299px;
+  flex-shrink: 1;
+  flex-basis: 238.2px;
+  flex-grow: 1;
   border-radius: 8px;
   border: 1px solid var(--Base-Dark-Line, #393c49);
   background: var(--Base-Dark-Bg-2, #1f1d2b);
