--- a/src/pages/DetailFood/DetailFood.css
+++ b/src/pages/DetailFood/DetailFood.css
@@ -8,6 +8,7 @@
 .container_detailFood{
     display: flex;
     flex-direction: row;
+    flex-shrink: 1;
     max-width:1310px;
     margin-left: 24px;
 }
@@ -15,21 +16,18 @@
 .container_detailFood .box1{
     display: flex;
     flex-direction: column;
-    height: 406px;
-    width: 450px;
+    max-height: 406px;
+    flex-shrink: 3;
 }
 
 .container_detailFood .box2{
     display: flex;
     flex-direction: column;
     height: 406px;
-    width: 825px;
     margin-left: 35px;
 }
 
 .container_detailFood .box1 .img_main{
-    position: relative;
-    width: 450px;
     height: 324px;
     top: 0;
     border-radius: 2px;
@@ -62,10 +60,32 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    width: 845px;
     height: 181px;
+    overflow: auto;
+    text-wrap: wrap;
     margin-top: 16px;
 }
+
+.container_detailFood .box2 .description::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Track */
+  .container_detailFood .box2 .description::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  .container_detailFood .box2 .description::-webkit-scrollbar-thumb {
+    background: #393c49;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  .container_detailFood .box2 .description::-webkit-scrollbar-thumb:hover {
+    background: #4a4545;
+  }
 
 .container_detailFood .box2 .add_to_card_button{
     width: 136px;
@@ -89,14 +109,14 @@
 
 .container_detailFood .box1 .sub_img_container{
     display: grid;
-    grid-template-columns: repeat(3, 145px);
+    grid-template-columns: repeat(3, 1fr);
     gap: 7px;
     margin-top: 8px;
 }
 
 .container_detailFood .box1 .sub_img_container .sub_img{
-    width: 145px;
-    height: 74px;
+    max-width: 145px;
+    max-height: 74px;
     border-radius: 2px;
 }
 
