--- a/src/pages/Menu/Menu.css
+++ b/src/pages/Menu/Menu.css
@@ -4,10 +4,14 @@
 }
 
 .container-menu .content-menu{
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(5, 238.2px);
     grid-template-rows: repeat(3, 280.8px);
-    gap: 24px 28px;
+    gap: 24px 28px; */
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 1;
+    gap :28px;
     margin-left: 24px;
 }
 
