--- a/src/components/ShoppingCard/ShoppingCard.css
+++ b/src/components/ShoppingCard/ShoppingCard.css
@@ -171,6 +171,7 @@ line-height: 140%; /* 22.4px */
     overflow-x: hidden;
     gap: 24px;
     max-height: 50vh;
+    padding-bottom: 24px;
     border-bottom: 1px solid #393C49;
 }
 
