--- a/src/components/Layouts/Layout3/Layout3.css
+++ b/src/components/Layouts/Layout3/Layout3.css
@@ -1,7 +1,10 @@
 .layout3{
-    width: 1114px;
+    width: 1161px;
 }
 
 .layout-app-container .right-compo{
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
