--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -4,6 +4,7 @@
   border-bottom-right-radius: 16px;
   background-color: #1f1d2b;
   height: 100vh;
+  transition: all ease-in-out 0.4s;
   position: fixed;
 }
 
@@ -24,6 +25,9 @@
   height: 40px;
 }
 
+.container-sidebar .item-sidebar:not(.item-active):hover{
+  transform: scale(1.5);
+}
 .container-sidebar .item-sidebar {
   height: 104px;
   width: 104px;
@@ -31,6 +35,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 16px;
+  transition: all ease-in-out 0.4s;
   position: relative;
 }
 
