--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,11 +17,11 @@
 }
 
 .action-container {
-  position: fixed;
+ position: fixed;
   bottom: 40px; /* khoảng cách từ dưới cùng */
   width: 551px;
   height: 62px;
-  display: flex;
+  display: flex; 
   justify-content: center;
 }
 
@@ -41,16 +41,16 @@
 .icon {
   color:black;
 }
-.action-btn {
+.action-container .action-btn {
   background-color: #fff;
   color: #111111;
   padding: 0.8rem 0.5rem; 
   border: none;
-  border-radius: 20px;
+  border-radius: 30px;
   cursor: pointer;
   font-weight: bold;
 }
-.action-btn1 {
+.action-container .action-btn1 {
   background-color: #999999;
   color: #111111;
   padding: 0.8rem 1.4rem; 
@@ -59,7 +59,7 @@
   cursor: pointer;
   font-weight: bold;
 }
-.action-btn2 {
+.action-container .action-btn2 {
   background-color: #111111;
   color: #ffffff;
   padding: 0.8rem 1.4rem; 
