--- a/src/pages/BookTable/BookTable.css
+++ b/src/pages/BookTable/BookTable.css
@@ -32,7 +32,7 @@
     margin-bottom: 40px;
   }
   
-  .action-buttons {
+  .book-table-left .action-buttons {
     display: flex;
     gap: 20px;
     position:fixed;
