--- a/src/pages/ForgetPassword/ForgotPassword.css
+++ b/src/pages/ForgetPassword/ForgotPassword.css
@@ -1,385 +1,329 @@
-/* 
+/* General page styling */
 .login-register-page {
-    font-family: "Poppins", sans-serif;
-    display: flex;
-    width:1940px;
-    height:800px;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url(/src/assets/image/pexels-rachel-claire-4577179\ 2.png) no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  
-  .wrapper{
-    position: relative;
-    width: 500px;
-    height: 500px;
-    background: transparent;
-    border: 2px solid rgba(255,255,255,.1);
-    backdrop-filter: blur(30px);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,-2);
-    color: #fff;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    transition: height .2s ease;
-  }
-  
-  .wrapper .form-box {
-    width: 100%;
-    padding: 40px;
-  }
-  
-  .wrapper .form-box.login{
-    transition: translate .18s ease;
-    translate: 0;
-  } 
-  .wrapper.active .form-box.login {
-    transition: none;
-    translate: -600px;
-  }
-  
-  .wrapper .form-box.registration {
-    position: absolute;
-    transition: none;
-    translate: 600px;
-  }
-  
-  .wrapper.active .form-box.registration{
-    transition: translate .18s ease;
-    translate: 0;
-  }
-  form h1{
-    font-size: 36px;
-    text-align: center;
-    }
-  form .input-box{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin: 30px 0;
-  
-  
-  }
-  
-  .input-box input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255 , 255, 255, .1);
-    border-radius: 40px;
-    font-size: 16px;
-    color: #ffff;
-    padding: 0px 15px 0px ;
-  }
-  .input-box input::placeholder {
-    color: #fff;
-  }
-  .input-box .icon {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    translate:0 -50%;
-    font-size:16px;
-  }
-  
-  form button {
-    width: 100%;
-    height: 45px;
-    background: #fff;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 700;
-    color: #364261;
-  }
-  form .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-  }
-  
-.register-link p a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-  }
-.register-link p a:hover {
-    text-decoration: underline;
-  } */
-
- /* General page styling */
- .login-register-page {
-    font-family: "Poppins", sans-serif;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      min-height: 100vh;
-      background: url(/src/assets/image/pexels-rachel-claire-4577179\ 2.png) no-repeat center center/cover;
-      background-size: cover;
-      color: #ffffff;
-      padding: 0 40px;
-  }
-  .welcome-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    color: #ffffff;
-  }
-  .welcome-section h1 {
-    font-size: 96px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  .skip-button {
-    width: 250px; /* Điều chỉnh giá trị này cho phù hợp với chiều rộng mong muốn */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 15px 6px;
-    background: transparent;
-    border: 2px solid #ffffff;
-    border-radius: 8px;
-    color: #ffffff;
-    /* font-size: 16px; */
-    cursor: pointer;
-    margin-top: 10px;
-    text-align: center;
-    font-family: "Noto Sans";
-    font-size: 32px;
-    font-style: italic;
-    font-weight: 600;
-    line-height: normal;
-  }
-  /* Wrapper container styling */
-  .wrapper {
-      width: 480px;
-      padding: 30px;
-      height: 796px;
-      background: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-      /* display: flex;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh;
+  background: url(/src/assets/image/pexels-rachel-claire-4577179\ 2.png)
+    no-repeat center center/cover;
+  background-size: cover;
+  color: #ffffff;
+  padding: 0 40px;
+}
+.welcome-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  color: #ffffff;
+}
+.welcome-section h1 {
+  font-size: 96px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.skip-button {
+  width: 250px; /* Điều chỉnh giá trị này cho phù hợp với chiều rộng mong muốn */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 15px 6px;
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 8px;
+  color: #ffffff;
+  /* font-size: 16px; */
+  cursor: pointer;
+  margin-top: 10px;
+  text-align: center;
+  font-family: "Noto Sans";
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 600;
+  line-height: normal;
+}
+/* Wrapper container styling */
+.wrapper {
+  width: 480px;
+  padding: 30px;
+  height: 796px;
+  background: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+  /* display: flex;
       flex-direction: column;
       align-items: flex-start; */
-      display: inline-flex;
-      padding: 97px 40px 47px 40px;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: center;
-      border-radius: 20px;
-      border: 1px solid var(--Glass1-Stroke-Carey, #AFAFAF);
-      background: var(--Glass1-Fill-Carey, linear-gradient(321deg, rgba(191, 191, 191, 0.06) 5.98%, rgba(0, 0, 0, 0.00) 66.28%), rgba(0, 0, 0, 0.14));
-      box-shadow: -8px 4px 5px 0px rgba(0, 0, 0, 0.24);
-      backdrop-filter: blur(26.5px);
-  }
-  .wrapper .login {
-    width: 100%;
-    height: 100%;
-   
+  overflow: hidden;
+  display: inline-flex;
+  padding: 97px 40px 47px 40px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 20px;
+  border: 1px solid var(--Glass1-Stroke-Carey, #afafaf);
+  background: var(
+    --Glass1-Fill-Carey,
+    linear-gradient(
+      321deg,
+      rgba(191, 191, 191, 0.06) 5.98%,
+      rgba(0, 0, 0, 0) 66.28%
+    ),
+    rgba(0, 0, 0, 0.14)
+  );
+  box-shadow: -8px 4px 5px 0px rgba(0, 0, 0, 0.24);
+  backdrop-filter: blur(26.5px);
+}
+.wrapper .login {
+  width: 100%;
+  height: 100%;
+
   flex-direction: column;
   align-items: flex-start;
   gap: 14px;
-  }
-  
-  /* Header title styling */
-  .wrapper h2 {
-    font-size: 36px;
-    margin-bottom: 10px;
-    text-align: left;
-  }
-  .wrapper p.subtitle {
-    font-size: 16px;
-    color: #bbb;
-    margin-bottom: 20px;
-    text-align: left;
-  }
-  
-  /* Input field container styling */
-  .input-box {
-    position: relative;
-    width: 100%;
-    height: 55px;
-    margin: 15px 0;
-  }
-  
-  /* Input fields styling */
-  .input-box input {
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0); /* Semi-transparent */
-    /* border: none;
+}
+
+/* Header title styling */
+.wrapper h2 {
+  font-size: 36px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+.wrapper p.subtitle {
+  font-size: 16px;
+  color: #bbb;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+/* Input field container styling */
+.input-box {
+  position: relative;
+  width: 100%;
+  height: 55px;
+  margin: 15px 0;
+}
+
+/* Input fields styling */
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0); /* Semi-transparent */
+  /* border: none;
     outline: none; */
-    border-radius: 12px;
-    border: 1px solid #FFF;
-    border-radius: 10px;
-    padding: 0 15px;
-    color: #ffffff;
-    font-size: 16px;
-  }
-  
-  /* Placeholder styling */
-  .input-box input::placeholder {
-    color: #ffffff;
-    font-size: 14px;
-  }
-  
-  /* Icon styling for input fields */
-  .input-box .icon {
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #ffffff;
-  }
-  .remember-me {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    color: #ffffff;
-    font-size: 14px;
-  }
-  
-  .remember-me input[type="checkbox"] {
-    margin-right: 8px;
-    accent-color: linear-gradient(91deg, #628EFF 9.91%, #8740CD 53.29%, #580475 91.56%); /* Checkbox color */
-  }
-  
-  .remember-me label {
-    cursor: pointer;
-  }
-  /* Button styling */
-  form button {
-    width: 100%;
-    height: 45px;
-    border-radius: 12px;
-    background: linear-gradient(91deg, #628EFF 9.91%, #8740CD 53.29%, #580475 91.56%);
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    color: #ffffff;
-    margin-top: 20px;
-  }
-  form button.active {
-    background: linear-gradient(45deg, #6e45e2, #88d3ce); /* Gradient background when active */
-    cursor: pointer; /* Enabled cursor */
-  }
-  .forgot-password {
-    text-align: right;
-    font-size: 14px;
-    margin-top: 15px;
-    color: #ffffff;
-    cursor: pointer;
-    /* text-decoration: underline; */
-  }
-  
-  .or-divider {
-    display: flex;
-    align-items: flex-end;
-    width: 100%;
-    height: 80%;
-    margin: 40px 0 0; 
-    /* display: flex;
+  border-radius: 12px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  padding: 0 15px;
+  color: #ffffff;
+  font-size: 16px;
+}
+
+/* Placeholder styling */
+.input-box input::placeholder {
+  color: #ffffff;
+  font-size: 14px;
+}
+
+/* Icon styling for input fields */
+.input-box .icon {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #ffffff;
+}
+.remember-me {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  color: #ffffff;
+  font-size: 14px;
+}
+
+.remember-me input[type="checkbox"] {
+  margin-right: 8px;
+  accent-color: linear-gradient(
+    91deg{action},
+    #628eff 9.91%,
+    #8740cd 53.29%,
+    #580475 91.56%
+  ); /* Checkbox color */
+}
+
+.remember-me label {
+  cursor: pointer;
+}
+/* Button styling */
+.form-box form button {
+  width: 100%;
+  height: 45px;
+  border-radius: 12px;
+  background: linear-gradient(
+    91deg,
+    #628eff 9.91%,
+    #8740cd 53.29%,
+    #580475 91.56%
+  );
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-top: 20px;
+}
+.form-box form button.active {
+  background: linear-gradient(
+    45deg,
+    #6e45e2,
+    #88d3ce
+  ); /* Gradient background when active */
+  cursor: pointer; /* Enabled cursor */
+}
+.forgot-password {
+  text-align: right;
+  font-size: 14px;
+  margin-top: 15px;
+  color: #ffffff;
+  cursor: pointer;
+  /* text-decoration: underline; */
+}
+
+.or-divider {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 80%;
+  margin: 40px 0 0;
+  /* display: flex;
   align-items: center;
   gap: 20px; */
-  }
-  .or-divider hr {
-    flex: 1;
-    border: none;
-    height: 1px;
-    background-color: #555;
-  }
-  
-  .or-divider span {
-    margin: 0 10px;
-    color: #bbb;
-    font-size: 14px;
-  }
-  /* Disabled button styling */
-  form button:disabled {
-    background: #ccc;
-    cursor: not-allowed;
-  }
-  
-  /* Remember me and forgot password links */
-  form .remember-me {
-    display: flex;
-    align-items: center;
-    color: #ffffff;
-    font-size: 14px;
-    margin-top: 10px;
-  }
-  
-  form .forgot-password {
-    text-align: center;
-    color: #ffffff;
-    font-size: 14px;
-    margin-top: 10px;
-    /* text-decoration: underline; */
-  }
-  
-  /* Register link styling */
-  .register-link {
-    font-size: 14px;
-    text-align: center;
-    color: #ffffff;
-    margin-top: 15px;
-  }
-  
-  .register-link a {
-    color: #ffffff;
-    text-decoration: underline;
-  }
-  
-  /* Social login buttons */
-  .social-login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   
-  }
-  .social-login-group {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 12px;
-  }
-  .social-login .loginicon{
-    font-size: 42px;
-  }
-  .social-login button {
-    color: #ffffff;
-    font-size: 30px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-  }
-  .information-link {
-    margin: 100px 0; 
-    
-  } 
-  .footer-links {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    font-size: 12px;
-    color: #bbb;
-    margin-top: 20px;
-  }
-  
-  .footer-links a {
-    color: #bbb;
-    text-decoration: none;
-  }
-  
+}
+.or-divider hr {
+  flex: 1;
+  border: none;
+  height: 1px;
+  background-color: #555;
+}
+
+.or-divider span {
+  margin: 0 10px;
+  color: #bbb;
+  font-size: 14px;
+}
+/* Disabled button styling */
+form button:disabled {
+  background: #ccc;
+  cursor: not-allowed;
+}
+
+/* Remember me and forgot password links */
+form .remember-me {
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+form .forgot-password {
+  text-align: center;
+  color: #ffffff;
+  font-size: 14px;
+  margin-top: 10px;
+  /* text-decoration: underline; */
+}
+
+/* Register link styling */
+.register-link {
+  font-size: 14px;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 15px;
+}
+
+.register-link a {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+/* Social login buttons */
+.social-login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.social-login-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
+}
+.social-login .loginicon {
+  font-size: 42px;
+}
+.social-login button {
+  color: #ffffff;
+  font-size: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+.information-link {
+  margin: 30px 0;
+}
+.footer-links {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  font-size: 12px;
+  color: #bbb;
+  margin-top: 20px;
+}
+
+.footer-links a {
+  color: #bbb;
+  text-decoration: none;
+}
+
+.inp-otp input {
+  border: 1px solid #fff;
+  border-radius: 8px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+}
+
+.MuiInputBase-root:hover {
+  border: 1px solid #fff;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.form-box {
+  position: relative;
+  transition: all ease-in-out 0.4s;
+}
+
+.form-box .forget {
+  position: absolute;
+  width: 100%;
+  transition: all ease-in-out 0.4s;
+  top: 0;
+}
+
+.form-box .forget:last-of-type {
+  left: 500px;
+}
+
+.form-box .forget.active:first-of-type {
+  left: -500px;
+}
+
+.form-box .forget:first-of-type {
+  left: 0px;
+}
+
+.form-box .forget.active:last-of-type {
+  left: 0;
+}
