--- a/src/pages/Login/LoginRegister.css
+++ b/src/pages/Login/LoginRegister.css
@@ -271,7 +271,7 @@ gap: 14px;
   color: #ffffff;
   margin-top: 20px;
 }
-form button.active {
+.form-box form button.active {
   background: linear-gradient(45deg, #6e45e2, #88d3ce); /* Gradient background when active */
   cursor: pointer; /* Enabled cursor */
 }
@@ -366,7 +366,7 @@ form .forgot-password {
   cursor: pointer;
 }
 .information-link {
-  margin: 100px 0; 
+  margin: 30px 0; 
   
 } 
 .footer-links {
