--- a/src/pages/SignUp/Register.css
+++ b/src/pages/SignUp/Register.css
@@ -138,7 +138,7 @@
     cursor: pointer;
   }
   /* Button styling */
-  form button {
+  .form-box form button {
     width: 100%;
     height: 45px;
     border-radius: 12px;
@@ -152,7 +152,7 @@
     color: #ffffff;
     margin-top: 20px;
   }
-  form button.active {
+  .form-box form button.active {
     background: linear-gradient(45deg, #6e45e2, #88d3ce); /* Gradient background when active */
     cursor: pointer; /* Enabled cursor */
   }
@@ -247,7 +247,7 @@
     cursor: pointer;
   }
   .information-link {
-    margin: 60px 0; 
+    margin: 30px 0; 
     
   } 
   .footer-links {
