--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -78,17 +78,24 @@ line-height: 140%; /* 19.6px */
   padding-bottom: 10px;
 }
 
-.container-table table tbody td:last-of-type div{
+.container-table table tbody td:nth-last-child(2) div{
   padding-left: 14px;
   padding-right: 14px;
-  height: 26px;
-  width: 91px;
+  min-height: 26px;
+  width: 120px;
   margin-left: auto;
+  margin-right: auto;
   border-radius: 30px;
   background: rgba(107, 226, 190, 0.24);
+  color: var(--Accents-Green, #50D1AA);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.container-table table tbody td:nth-last-child(2) div.pending{
+  background: rgba(255, 181, 114, 0.20);
+  color: var(--Accents-Orange, #FFB572);
 }
 
 .container-body-table::-webkit-scrollbar {
